@@ -27,10 +27,11 @@
   set.
 }
 \details{
-  The \code{Qt} option is supplied to Qhull by default. The
-  code ensures that one of \code{Qt} or \code{QJ} is passed
-  to Qhull. See \url{../doc/html/qdelaun.html} for more
-  details.
+  If neither of the \code{QJ} or \code{Qt} options are
+  supplied, the \code{QJ} is passed to Qhull. The \code{QJ}
+  prevents the creation of degenerate simplicies (i.e.
+  those that lie in a \code{N-1}-dimensional subspace).
+  See \url{../doc/html/qdelaun.html} for more details.
 
   For slient operation, specify the option \code{Pp}.
 }
