@@ -27,21 +27,19 @@ Loading required package: abind
 > pct <- delaunayn(pc) 
 > print(pct)
       [,1] [,2] [,3] [,4]
- [1,]    4    3    2    1
- [2,]    4    9    2    1
- [3,]    4    9    3    1
- [4,]    6    5    2    1
- [5,]    6    9    2    1
- [6,]    6    9    5    1
- [7,]    6    4    8    2
- [8,]    6    4    9    2
- [9,]    6    4    8    9
-[10,]    7    9    3    1
-[11,]    7    9    5    1
-[12,]    7    4    9    3
-[13,]    7    4    8    9
-[14,]    7    6    9    5
-[15,]    7    6    8    9
+ [1,]    9    6    2    5
+ [2,]    1    9    2    5
+ [3,]    7    3    9    8
+ [4,]    7    9    6    5
+ [5,]    7    9    6    8
+ [6,]    7    1    9    5
+ [7,]    7    1    3    9
+ [8,]    4    3    9    8
+ [9,]    4    6    2    8
+[10,]    4    9    6    8
+[11,]    4    9    6    2
+[12,]    4    1    9    2
+[13,]    4    1    3    9
 > if (!inherits(pct, "matrix"))
 +   stop("Output of delaunayn should be an array")
 > 
